--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pancakeswap/info",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://cakeinfo.netlify.app",
   "dependencies": {
     "@popperjs/core": "^2.4.2",
     "@reach/portal": "^0.10.3",
